--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="https://github.com/salvatolab/salvatolab.github.io/tree/main/css/style.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Mentor
