--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/aos/aos.css" rel="stylesheet">
-  <link href="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/remixicon/remixicon.css" rel="stylesheet">
-  <link href="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Mentor
@@ -47,7 +47,7 @@
 
       <!--<h1 class="logo me-auto"><a href="index.html">Salvato Lab</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto"><img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -86,7 +86,7 @@
         <h1>Genomics to public health</h1>
         <a href="courses.html" class="btn-get-started">See what we’ve been working on</a>
       </div>
-      <img src="https://raw.githubusercontent.com/MarianaLuisa/Site-CDCT/3dfc1609a405e04919ecc183e1c7a2b053278633/mentor/img/capa.svg" alt="" class="hero-image">
+      <img src="https://raw.githubusercontent.com/MarianaLuisa/Site-CDCT/3dfc1609a405e04919ecc183e1c7a2b053278633/mentor/assets/img/capa.svg" alt="" class="hero-image">
     </div>
   </div>
 </section><!-- End Hero -->
@@ -99,7 +99,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-center">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-            <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/img/logo2.jpeg?raw=true" class="img-fluid" alt="">
+            <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/logo2.jpeg?raw=true" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-left" data-aos-delay="100">
             <h4 class="text-smaller mb-3" style="font-family: sans-serif; font-size: 16px;">
@@ -115,11 +115,11 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/aos/aos.js"></script>
-  <script src="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="https://github.com/salvatolab/salvatolab.github.io/blob/main/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="js/main.js"></script>
+  <script src="assets/js/main.js"></script>
