--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-center">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-            <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/img/logo2.jpeg?raw=true" class="img-fluid" alt="">
+            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/img/logo2.jpeg?raw=true" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-left" data-aos-delay="100">
             <h4 class="text-smaller mb-3" style="font-family: sans-serif; font-size: 16px;">
