--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h1>Genomics to public health</h1>
         <a href="courses.html" class="btn-get-started">See what we’ve been working on</a>
       </div>
-      <img src="https://raw.githubusercontent.com/MarianaLuisa/Site-CDCT/3dfc1609a405e04919ecc183e1c7a2b053278633/mentor/img/capa.svg" alt="" class="hero-image">
+      <img src="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/8944cbbebdc2ad865fd1c84be8c08f939ba40add/img/capa.svg" alt="" class="hero-image">
     </div>
   </div>
 </section><!-- End Hero -->
