--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Mentor
@@ -47,7 +47,7 @@
 
       <!--<h1 class="logo me-auto"><a href="index.html">Salvato Lab</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto"><img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -86,7 +86,7 @@
         <h1>Genomics to public health</h1>
         <a href="courses.html" class="btn-get-started">See what we’ve been working on</a>
       </div>
-      <img src="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/8944cbbebdc2ad865fd1c84be8c08f939ba40add/img/capa.svg" alt="" class="hero-image">
+      <img src="https://raw.githubusercontent.com/MarianaLuisa/Site-CDCT/3dfc1609a405e04919ecc183e1c7a2b053278633/mentor/assets/img/capa.svg" alt="" class="hero-image">
     </div>
   </div>
 </section><!-- End Hero -->
@@ -99,7 +99,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-center">
           <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/img/logo2.jpeg?raw=true" class="img-fluid" alt="">
+            <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/logo2.jpeg?raw=true" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-left" data-aos-delay="100">
             <h4 class="text-smaller mb-3" style="font-family: sans-serif; font-size: 16px;">
