--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
       <!--<h1 class="logo me-auto"><a href="index.html">Salvato Lab</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto"><img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
 
 
       <nav id="navbar" class="navbar order-last order-lg-0">
