--- a/courses.html
+++ b/courses.html
@@ -45,7 +45,7 @@
 
       <!--<h1 class="logo me-auto"><a href="index.html">Salvato Lab</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto"><img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
 
 
       <nav id="navbar" class="navbar order-last order-lg-0">
@@ -97,7 +97,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="course-item">
-              <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/publication3.jpeg?raw=true" class="img-fluid" alt="...">
+              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication3.jpeg?raw=true" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>We described the first possible transmission through infected superficie in the 2022 global Mpox outbreak </h4>
@@ -123,7 +123,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
-              <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/publication4.jpeg?raw=true" class="img-fluid" alt="...">
+              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication4.jpeg?raw=true" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>First recombination event between Delta and Ômicron SARS-CoV-2 lineages reported in Brazil </h4>
@@ -151,7 +151,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
-              <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/publication6.jpeg?raw=true" class="img-fluid" alt="...">
+              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication6.jpeg?raw=true" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>Phenotypical, molecular and epidemiological features of a highly rifampicin-resistant Mycobacterium tuberculosis strain emerging in Southern Brazil</h4>
@@ -179,7 +179,7 @@ A highly rifampicin resistant Mycobacterium tuberculosis strain emerging in So
 					  
 					  <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
-              <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/publication5.jpeg?raw=true" class="img-fluid" alt="...">
+              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication5.jpeg?raw=true" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4>A state-wide population based study on resistant tuberculosis using WGS</h4>
@@ -204,7 +204,7 @@ A highly rifampicin resistant Mycobacterium tuberculosis strain emerging in So
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
-              <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/publication1.jpg?raw=true" class="img-fluid" alt="...">
+              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication1.jpeg?raw=true" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4> Phylogenetic analysis unveiled multiple introductions of DENV-2 genotype II (Cosmopolitan) into Brazil from Peru, generating multiple clades that spread in the country with different success </h4>
@@ -233,7 +233,7 @@ A highly rifampicin resistant Mycobacterium tuberculosis strain emerging in So
 			
 			<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="course-item">
-              <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/publication2.jpg?raw=true" class="img-fluid" alt="...">
+              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication2.jpeg?raw=true" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   
