--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
 
        <!--<h1 class="logo me-auto"><a href="index.html">Salvato Lab</a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo me-auto"><img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
+      <a href="index.html" class="logo me-auto"><img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/logo2.jpeg?raw=true" alt="" class="img-fluid"></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -95,7 +95,7 @@
           <div class="col-md-6 d-flex align-items-stretch">
             <div class="card">
               <div class="card-img">
-                <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/projects1.jpeg?raw=true" alt="...">
+                <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/projects1.jpeg?raw=true" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Genomic surveillance of zoonotic viruses using a One Health approach in Rio Grande do Sul</a></h5>
@@ -108,7 +108,7 @@ To carry out this investigation, our team process the samples using different ge
           <div class="col-md-6 d-flex align-items-stretch">
             <div class="card">
               <div class="card-img">
-                <img src="https://github.com/MarianaLuisa/Site-CDCT/blob/main/mentor/assets/img/projects2.jpeg?raw=true" alt="...">
+                <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/projects2.jpeg?raw=true" alt="...">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Development of amplicon-based genomic sequencing and targeted metagenomics methods for detection and surveillance of viral pathogens with Epi-Pandemic potential</a></h5>
