--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/img/about.jpeg?raw=true" class="img-fluid" alt="">
+            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about.jpeg?raw=true" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <p class="fst-italic">
