--- a/courses.html
+++ b/courses.html
@@ -204,7 +204,7 @@ A highly rifampicin resistant Mycobacterium tuberculosis strain emerging in So
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="course-item">
-              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication1.jpg?raw=true" class="img-fluid" alt="...">
+              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication1.jpeg?raw=true" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   <h4> Phylogenetic analysis unveiled multiple introductions of DENV-2 genotype II (Cosmopolitan) into Brazil from Peru, generating multiple clades that spread in the country with different success </h4>
@@ -233,7 +233,7 @@ A highly rifampicin resistant Mycobacterium tuberculosis strain emerging in So
 			
 			<div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="course-item">
-              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication2.jpg?raw=true" class="img-fluid" alt="...">
+              <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/publication2.jpeg?raw=true" class="img-fluid" alt="...">
               <div class="course-content">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                   
