--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
   <title>Salvato Lab</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <!-- Adicionando o ícone à aba do navegador -->
+  <link rel="icon" href="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/2c2bb6d4825b80710495acbbe0f02b3b6150ff12/assets/img/capa.svg" type="image/x-icon">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
