--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mentor Bootstrap Template - Index</title>
+   <title>Salvato Lab</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <!-- Adicionando o ícone à aba do navegador -->
+  <link rel="icon" href="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/icon.jpeg?raw=true" type="image/x-icon">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
