--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Salvato Lab</title>
+ <title>Salvato Lab</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <!-- Adicionando o ícone à aba do navegador -->
-  <link rel="icon" href="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/2c2bb6d4825b80710495acbbe0f02b3b6150ff12/assets/img/capa.svg" type="image/x-icon">
+  <link rel="icon" href="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/icon.jpeg?raw=true" type="image/x-icon">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
