--- a/trainers.html
+++ b/trainers.html
@@ -372,8 +372,7 @@
 
       <!-- ======= Seção Richard e Fernanda ======= -->
       <section id="richard-fernanda" class="richard-fernanda">
-		  <div class="container" data-aos="fade-up">
-			  
+  <div class="container" data-aos="fade-up" style="max-width: 900px; margin: 0 auto;">			  
   <div class="row" data-aos="zoom-in" data-aos-delay="100">
     <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
       <div class="member">
