--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
           <div class="col-md-6 d-flex align-items-stretch">
             <div class="card">
               <div class="card-img">
-                <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/projects1.jpeg?raw=true" alt="...">
+                <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/projects1.jpeg?raw=true" alt="..." style="max-width: 100%;">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Genomic surveillance of zoonotic viruses using a One Health approach in Rio Grande do Sul</a></h5>
@@ -110,7 +110,7 @@ To carry out this investigation, our team process the samples using different ge
           <div class="col-md-6 d-flex align-items-stretch">
             <div class="card">
               <div class="card-img">
-                <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/projects2.jpeg?raw=true" alt="...">
+                <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/projects2.jpeg?raw=true" alt="..." style="max-width: 100%;">
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="">Development of amplicon-based genomic sequencing and targeted metagenomics methods for detection and surveillance of viral pathogens with Epi-Pandemic potential</a></h5>
