--- a/about.html
+++ b/about.html
@@ -127,12 +127,26 @@ Explore our site to learn more about how we safeguard public health through inno
  
   <!-- ======= Footer ======= -->
   <footer id="footer">
-
     <div class="footer-top">
       <div class="container">
         <div class="row">
-          
-
+          <h4 class="text-smaller mb-3" style="font-family: sans-serif; font-size: 16px;">
+            Our research is financially supported by
+          </h4>
+          <div class="col-4" data-aos-delay="100">
+            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about2.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 50%; height: auto;">
+          </div>
+          <div class="col-4" data-aos-delay="100">
+            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about3.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 50%; height: auto;">
+          </div>
+          <div class="col-4" data-aos-delay="100">
+            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about4.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 50%; height: auto;">
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  
        
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
