--- a/about.html
+++ b/about.html
@@ -130,17 +130,20 @@ Explore our site to learn more about how we safeguard public health through inno
     <div class="footer-top">
       <div class="container">
         <div class="row">
-          <h4 class="text-smaller mb-3" style="font-family: sans-serif; font-size: 16px;">
+          
+          <h4 class="fst-italic">
             Our research is financially supported by
           </h4>
+          <p></p>
+      
           <div class="col-4" data-aos-delay="100">
-            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about2.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 50%; height: auto;">
+            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about2.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 70%; height: auto;">
           </div>
           <div class="col-4" data-aos-delay="100">
-            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about3.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 50%; height: auto;">
+            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about3.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 70%; height: auto;">
           </div>
           <div class="col-4" data-aos-delay="100">
-            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about4.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 50%; height: auto;">
+            <img src="https://github.com/salvatolab/salvatolab.github.io/blob/main/assets/img/about4.jpeg?raw=true" class="img-fluid" alt="" style="max-width: 70%; height: auto;">
           </div>
         </div>
       </div>
