--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
+
+<!--
 <section id="hero" class="d-flex justify-content-center align-items-center"> 
   <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
     <div class="hero-content d-flex align-items-center">
@@ -91,7 +93,30 @@
       <img src="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/dfac5d22f44044cbe06748e7a373d04b2596ce5e/assets/img/capa.svg" alt="" class="hero-image">
     </div>
   </div>
-</section><!-- End Hero -->
+</section> 
+
+-->
+
+<section id="hero" class="d-flex justify-content-center align-items-center"> 
+  <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
+    <div class="row">
+      <div class="col-md-4 d-flex align-items-center justify-content-center">
+        <div class="hero-content text-center">
+          <h1>Genomics to public health</h1>
+          <a href="courses.html" class="btn-get-started">See what we’ve been working on</a>
+        </div>
+      </div>
+      <div class="col-md-8 d-flex align-items-center justify-content-center">
+        <img src="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/dfac5d22f44044cbe06748e7a373d04b2596ce5e/assets/img/capa.svg" alt="" class="hero-image img-fluid">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+<!-- End Hero -->
+
 
 
   <main id="main">
