--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 </section>
 -->
 
+
 <section id="hero" class="d-flex justify-content-center align-items-center"> 
   <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
     <div class="row">
@@ -111,8 +112,8 @@
         </div>
       </div>
       
-      <div class="col-md-8">
-        <div class="hero-image-wrapper text-center"> <!-- Remova a classe d-flex e adicione text-center -->
+      <div class="col-md-8 text-center">
+        <div class="hero-image-wrapper">
           <img src="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/dfac5d22f44044cbe06748e7a373d04b2596ce5e/assets/img/capa.svg" alt="" class="hero-image img-fluid">
         </div>
       </div>
@@ -123,30 +124,37 @@
 <style>
   @media (min-width: 768px) {
     .hero-image-wrapper {
-      max-width: 100%; /* Defina um tamanho máximo para a imagem */
+      max-width: 100%;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px; /* Adicione margem abaixo da imagem */
+    }
+
+    .hero-image {
+      max-width: 100%;
+      height: auto;
       display: flex;
       justify-content: center;
     }
 
-    .hero-image {
-      max-width: 100%; /* Defina um tamanho máximo para a imagem */
-      height: auto; /* Mantenha a proporção da imagem */
+    .btn-get-started {
+      margin-top: 20px; /* Adicione margem acima do botão */
     }
   }
 
-  /* Ajuste o tamanho das colunas */
   @media (min-width: 992px) {
     .col-md-4 {
-      flex: 0 0 50%; /* Define a largura da primeira coluna como 25% */
+      flex: 0 0 50%;
       max-width: 50%;
     }
 
     .col-md-8 {
-      flex: 0 0 50%; /* Define a largura da segunda coluna como 75% */
+      flex: 0 0 50%;
       max-width: 50%;
     }
   }
 </style>
+
 
 
 
