--- a/index.html
+++ b/index.html
@@ -102,19 +102,38 @@
 -->
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <section id="hero" class="d-flex justify-content-center align-items-center"> 
   <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
     <div class="row">
       <div class="col-md-4 d-flex align-items-center justify-content-center">
         <div class="hero-content text-center">
+          <!-- Adicione margens ao redor do conteúdo -->
           <h1>Genomics to public health</h1>
-          <a href="courses.html" class="btn-get-started">See what we’ve been working on</a>
+          <a href="courses.html" class="btn-get-started" style="margin-bottom: 20px;">See what we’ve been working on</a>
         </div>
       </div>
       
       <div class="col-md-8 text-center">
         <div class="hero-image-wrapper">
-          <img src="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/dfac5d22f44044cbe06748e7a373d04b2596ce5e/assets/img/capa.svg" alt="" class="hero-image img-fluid">
+          <!-- Adicione margens ao redor da imagem -->
+          <img src="https://raw.githubusercontent.com/salvatolab/salvatolab.github.io/dfac5d22f44044cbe06748e7a373d04b2596ce5e/assets/img/capa.svg" alt="" class="hero-image img-fluid" style="margin-left: 40%; ">
         </div>
       </div>
     </div>
@@ -127,7 +146,6 @@
       max-width: 100%;
       display: flex;
       justify-content: center;
-      margin-bottom: 20px; /* Adicione margem abaixo da imagem */
     }
 
     .hero-image {
@@ -136,25 +154,20 @@
       display: flex;
       justify-content: center;
     }
-
-    .btn-get-started {
-      margin-top: 20px; /* Adicione margem acima do botão */
-    }
   }
 
   @media (min-width: 992px) {
     .col-md-4 {
-      flex: 0 0 50%;
-      max-width: 50%;
+      flex: 0 0 35%;
+      max-width: 35%;
     }
 
     .col-md-8 {
-      flex: 0 0 50%;
-      max-width: 50%;
+      flex: 0 0 65%;
+      max-width: 65%;
     }
   }
 </style>
-
 
 
 
