--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
   @media (min-width: 768px) {
     .hero-image-wrapper {
       max-width: 100%;
-      display: flex;
+	     margin-left: auto;
+  margin-right: auto;
+  display: block; 
+      /*display: flex;*/
       justify-content: center;
       margin-left: 160px; /* Adiciona margem apenas para telas maiores que 768px */
     }
