--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   display: block; 
       /*display: flex;*/
       justify-content: center;
-      margin-left: 160px; /* Adiciona margem apenas para telas maiores que 768px */
+      /*margin-left: 160px; /* Adiciona margem apenas para telas maiores que 768px */
     }
 
     .hero-image {
