--- a/index.html
+++ b/index.html
@@ -150,6 +150,18 @@
       display: flex;
       justify-content: center;
     }
+
+@media (max-width: 767px) {
+  .hero-image-wrapper {
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-left: auto; /* Remove a margem para telas menores que 768px */
+  }
+}
+
+
+	  
   }
 
   @media (min-width: 992px) {
