--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     max-width: 100%;
     display: flex;
     justify-content: center;
-    margin-left: auto; /* Remove a margem para telas menores que 768px */
+margin-left: 30px; /* Remove a margem para telas menores que 768px */
   }
 }
 
