--- a/index.html
+++ b/index.html
@@ -138,8 +138,7 @@
     .hero-image-wrapper {
       max-width: 100%;
 	margin-right: auto;
-	display: block; 
-      /*display: flex;*/
+      display: flex;
       justify-content: center;
       margin-left: 160px; /* Adiciona margem apenas para telas maiores que 768px */
     }
@@ -156,7 +155,7 @@
     max-width: 100%;
     display: flex;
     justify-content: center;
-margin-left: 30px; /* Remove a margem para telas menores que 768px */
+margin-left: 100px; /* Remove a margem para telas menores que 768px */
   }
 }
 
