--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
 @media (max-width: 767px) {
   .hero-image-wrapper {
     max-width: 100%;
+	  margin-right: auto;
     display: flex;
     justify-content: center;
-margin-left: 100px; /* Remove a margem para telas menores que 768px */
+  margin-left: 160px;
   }
 }
 
